<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YYDRobotResourceManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="otg_state_info">The connected</string>
    <string name="otg_scanner_anim_duration">140</string>
    <string name="button_back">back</string>
    <string name="file_title">Music</string>
    <string name="type_video">Video</string>
    <string name="type_music">Music</string>
    <string name="type_picture">Picture</string>
    <string name="type_undentify">More files</string>
    <string name="file_add_time">2015-04-03</string>
    <string name="on_scanner">Is scanning...</string>
    <string name="office_type">other</string>
    <string name="office_item_name">文件名</string>
    <string name="office_item_time">文件时间</string>
    <string name="office_item_size">文件大小</string>
    <string name="video_name">极光者</string>
    <string name="video_publish_time">2015年10月</string>
     <string name="local_video_name">本地视频名称</string>
     <string name="video_current_time">00:00</string>
     <string name="video_format_error">sorry, but the format is not supported</string>

    <string name="To_scan">Is to scan, please later...</string>
    <string name="title_picture">Picture</string>
    <string name="title_music">Music</string>
    <string name="scanning_video">Is scanning the local video</string>
    <string name="Not_detect_video">Not detect the video file</string>
    <string name="not_remove_permission">Did not remove permissions</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_delete_sure">Are you sure you want to delete?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Delete</string>
    <string name="detected_audio">No detected audio files</string>
    <string name="detected_picture">No detected image files</string>
    <string name="no_office_file">No other documents for the time being</string>
    <string name="u_disk_remove">U disk has been removed</string>

</resources>
