<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView 
        android:layout_marginLeft="@dimen/office_item_icon_margin_left"
        android:layout_width="@dimen/office_item_icon_width"
        android:layout_height="@dimen/office_item_icon_width"
        android:id="@+id/iv_office_item_type_icon"
        android:background="@null"
        android:scaleType="centerCrop"
        android:padding="5dp"/>
   

    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/office_item_icon_margin_left"
         android:layout_marginRight="@dimen/office_item_icon_margin_left">
        
        <TextView 
        android:id="@+id/tv_office_item_type_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/office_item_name"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_marginTop="3dp"/>
        
        <TextView 
        android:id="@+id/tv_office_item_type_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:text="@string/office_item_time"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/tv_office_item_type_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/office_item_size"
        android:textColor="#ffffff"
        android:textSize="14sp" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
        
    </RelativeLayout>
    
        
    </LinearLayout>

</RelativeLayout>
